fixed arrow color in widget tree dark mode

--- a/client/css/jsonedit.css
+++ b/client/css/jsonedit.css
@@ -118,7 +118,6 @@
 /* Create the caret/arrow with a unicode, and style it */
 .jeTreeExpander::before, .jeTreeExpander-down::before {
   content: "\25B6";
-  color: black;
   display: inline-block;
   margin-right: 6px;
 }
